syntax = "proto3";

message PersonMsg {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string company_name = 4;
}

message PersonMsgList{
    repeated PersonMsg persons = 1;
}

message Empty {

}


service PersonService {
    rpc Get(Empty) returns (PersonMsgList);
}
